--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,8 @@
     "express": "^4.16.3",
     "mongoose": "^5.2.10",
     "request": "^2.88.0",
+    "request-stream": "^1.2.2",
+    "sequence": "^3.0.0",
     "use": "^3.1.1"
   }
 }
